- Hopefully fix daggersins' weapons ending up on the wrong hand.
- "Player Connected" did not trigger 'player' plugin call.
- Guild auto deny timeout was not included in timeouts.txt.
  Deal auto deny timeout was not being used.
- Increase the maximum vending price to 99,990,000z.
- Fix job_equipment_hair_change packet detecting actor incorrectly.

New features:
- Console::Unix interface no longer has "Press ENTER to continue"
  prompt, since UNIX terminals generally don't close when openkore exits.
- Your level/job level is now displayed when you level up.
- Player names are now cached, so that they don't have to be re-retrieved
  as often. This can save a lot of bandwidth, especially when you're
  walking in town.
- When teleportAuto_useSkill > 0, always cast Teleport skill if we are
  trying to respawn to saveMap (lets us auto-detect it).
- Support for baby classes! Kore will now be able to identify these
  classes correctly.
- You must specify target_dead 1 to use a skill on a dead person.
  This will prevent any problems where the bot keeps trying to use a skill
  like Heal or Blessing on someone who is dead.
- You can now attack looters even if the are normally ignored
  set attackLooters to 1 in config.txt
- 'cart add' and 'cart get' commands now accept names.

New config options:
- partySkill: target_dist (range)
  This is the same as target_dist for attackSkillSlot.
  Only use the skill if the player is in the given range.
- partySkill: isSelfSkill (flag)
  Use this skill on yourself after checking the party conditions.
  Useful for Magnificat or Gloria.
- cachePlayerNames (flag)
    Turns player name caching on or off.

  cachePlayerNames_duration (seconds)
    Cache player names for a maximum time of (seconds). The default is
    900 seconds (15 minutes).

  cachePlayerNames_maxSize (number)
    Maximum cache size. The default is 100.
- storageAuto_keepOpen (flag)
  Set to true if you want to keep storage open after storageAuto sequence.